--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,4 @@
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
-/.vs
-/1-1glfw输出测试/.vs/1-1glfw输出测试/v16
+*.opendb
