忽略冗余项

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
-*.opendb
+.vs/
+x64/
+Debug/
+*.vcxproj
+*.vcxproj.user
+*.filters
+*.sln
