--- a/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj.filters
+++ b/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="hButton.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="hRect.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="hObject.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hButton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hRect.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hObject.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
