对象类测试

--- a/03_OpenGL绘制方式/06_有名缓存基本操作/06_有名缓存基本操作.vcxproj.filters
+++ b/03_OpenGL绘制方式/06_有名缓存基本操作/06_有名缓存基本操作.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\10_绘制按钮\hObject.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\10_绘制按钮\hObject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
