--- a/03_OpenGL绘制方式/06_有名缓存基本操作/06_有名缓存基本操作.vcxproj
+++ b/03_OpenGL绘制方式/06_有名缓存基本操作/06_有名缓存基本操作.vcxproj
@@ -141,7 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\10_绘制按钮\hObject.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\10_绘制按钮\hObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
