--- a/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj
+++ b/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj
@@ -143,16 +143,20 @@
   <ItemGroup>
     <ClCompile Include="ButtonTestApp.cpp" />
     <ClCompile Include="ButtonTestUi.cpp" />
+    <ClCompile Include="hAppBase.cpp" />
     <ClCompile Include="hButton.cpp" />
     <ClCompile Include="hObject.cpp" />
     <ClCompile Include="hRect.cpp" />
+    <ClCompile Include="hTime.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ButtonTest.h" />
+    <ClInclude Include="hAppBase.h" />
     <ClInclude Include="hButton.h" />
     <ClInclude Include="hObject.h" />
     <ClInclude Include="hRect.h" />
+    <ClInclude Include="hTime.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
