--- a/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj
+++ b/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj
@@ -141,12 +141,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ButtonTestApp.cpp" />
-    <ClCompile Include="ButtonTestUi.cpp" />
+    <ClCompile Include="ButtonTest.cpp" />
     <ClCompile Include="hAppBase.cpp" />
     <ClCompile Include="hAppBaseData.cpp" />
     <ClCompile Include="hAppUiData.cpp" />
     <ClCompile Include="hButton.cpp" />
+    <ClCompile Include="hColor.cpp" />
     <ClCompile Include="hObject.cpp" />
     <ClCompile Include="hRect.cpp" />
     <ClCompile Include="hTime.cpp" />
@@ -154,11 +154,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ButtonTest.h" />
-    <ClInclude Include="ButtonTestUi.h" />
     <ClInclude Include="hAppBase.h" />
     <ClInclude Include="hAppBaseData.h" />
     <ClInclude Include="hAppUiData.h" />
     <ClInclude Include="hButton.h" />
+    <ClInclude Include="hColor.h" />
     <ClInclude Include="hObject.h" />
     <ClInclude Include="hRect.h" />
     <ClInclude Include="hTextOpt.h" />
