--- a/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj
+++ b/03_OpenGL绘制方式/10_绘制按钮/10_绘制按钮.vcxproj
@@ -141,7 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ButtonTest.cpp" />
+    <ClCompile Include="ButtonTestApp.cpp" />
+    <ClCompile Include="ButtonTestUi.cpp" />
     <ClCompile Include="hAppBase.cpp" />
     <ClCompile Include="hAppBaseData.cpp" />
     <ClCompile Include="hAppUiData.cpp" />
@@ -150,10 +151,12 @@
     <ClCompile Include="hObject.cpp" />
     <ClCompile Include="hRect.cpp" />
     <ClCompile Include="hTime.cpp" />
+    <ClCompile Include="hUi.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ButtonTest.h" />
+    <ClInclude Include="ButtonTestApp.h" />
+    <ClInclude Include="ButtonTestUi.h" />
     <ClInclude Include="hAppBase.h" />
     <ClInclude Include="hAppBaseData.h" />
     <ClInclude Include="hAppUiData.h" />
@@ -163,6 +166,8 @@
     <ClInclude Include="hRect.h" />
     <ClInclude Include="hTextOpt.h" />
     <ClInclude Include="hTime.h" />
+    <ClInclude Include="hUi.h" />
+    <ClInclude Include="hUiParam.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
